--- a/main.html
+++ b/main.html
@@ -14,22 +14,56 @@
 
   <body>
     <footer>
-      <div class="content">
+    <div class="content">
         <div class="top">
-          <div class="logo-details">
-            <span class="logo_name">company</span>
-          </div>
-          <div class="media-icons">
-            <!-- your code here -->
-          </div>
+            <div class="logo-details">
+                <span class="logo_name">company</span>
+            </div>
+            <div class="media-icons">
+                <!-- your code here -->
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+            </div>
         </div>
         <div class="link-boxes">
-          <!-- your code here -->
+            <!-- your code here -->
+            <div class="child">
+                <h2>Links</h2>
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+                <a href="#">About Us</a>
+            </div>
+            <div class="child">
+                <h2>Services</h2>
+                <a href="#">App Design</a>
+                <a href="#">Web Design</a>
+                <a href="#">Logo Design</a>
+                <a href="#">Banner Design</a>
+            </div>
+            <div class="child">
+                <h2>Other Services</h2>
+                <a href="#">SEO</a>
+                <a href="#">Content Marketing</a>
+                <a href="#">Prints</a>
+                <a href="#">Social Media</a>
+            </div>
+            <div class="child">
+                <h2>Contact</h2>
+                <a href="#">8879887262</a>
+                <a href="#">+91 8879887262 </a>
+                <a href="#">contact@company.com</a>
+            </div>
         </div>
-      </div>
-      <div class="bottom-details">
+    </div>
+    <div class="bottom-details">
         <!-- your code here -->
-      </div>
-    </footer>
+        <div>
+            Copyright  2021 company.
+        </div>
+        <div>
+            Privacy Policy
+        </div>
+    </div>
+</footer>
   </body>
 </html>
