--- a/main.html
+++ b/main.html
@@ -23,6 +23,9 @@
                 <!-- your code here -->
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-twitter"></a>
             </div>
         </div>
         <div class="link-boxes">
